<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_bar_movie">Movie Detail</string>
    <string name="title_bar_tv">TV Show Detail</string>
    <string name="fav_tab_movie">Movies</string>
    <string name="fav_tab_tvshow">TV Show</string>
    <string name="favorite">Favorite</string>
    <string name="desc_movie">Movie Description</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="title">Title</string>
    <string name="year">Date</string>
    <string name="score">Score</string>
    <string name="writer">Writer</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="msg_fav_success">Success adding %1$s to Favorite</string>
    <string name="msg_fav_failed">%1$s already in favorite</string>
    <string name="button_delete_favorite">button delete favorite</string>
    <string name="msg_delete_fav_success">Success delete %1$s</string>
    <string name="msg_delete_fav_failed">Failed delete %1$s</string>
    <string name="search_hint">Search</string>
    <string name="no_data">No data</string>
    <string name="no_data_favorite_movie">No data Movie Favorite</string>
    <string name="no_data_favorite_tvShow">No data TV Show Favorite</string>
    <string name="menu_search">Search</string>
    <string name="appwidget_text">MOVIES FAVORITE</string>
    <string name="empty_text">NO DATA</string>
    <string name="widget_item">widget item</string>
    <string name="menu_setting">Setting</string>
    <string name="title_activity_notification_setting">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="language">Language</string>
    <string name="change_language_summary">Change language setting</string>
    <string name="notification">Notification</string>
    <string name="release_today">Release Today</string>
    <string name="daily_remainder">Daily Remainder</string>
    <string name="message_daily_remainder">Hi you haven\'t checked Movie Catalogue today</string>
    <string name="release_today_remainder">Release Today Remainder</string>
    <string name="message_release_today_remainder">Today\'s film release await you</string>
    <string name="active">Active</string>
    <string name="canceled">Canceled</string>
    <string name="on_daily_remainder">Daily remainder active every 7 AM</string>
    <string name="off_daily_remainder">Daily remainder inactive</string>
    <string name="off_release_today_remainder">Release today remainder inactive</string>
    <string name="on_release_today_remainder">Release today remainder active every 8 AM</string>
    <string name="image_backdrop">Image Backdrop</string>
</resources>
