<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/language">
        <Preference
            app:key="@string/change_language"
            app:summary="@string/change_language_summary"
            app:title="@string/change_language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification">
        <SwitchPreferenceCompat
            app:key="@string/daily_remainder"
            app:summaryOff="@string/off_daily_remainder"
            app:summaryOn="@string/on_daily_remainder"
            app:title="@string/daily_remainder" />

        <SwitchPreferenceCompat
            app:key="@string/release_today_remainder"
            app:summaryOff="@string/off_release_today_remainder"
            app:summaryOn="@string/on_release_today_remainder"
            app:title="@string/release_today_remainder" />
    </PreferenceCategory>

</PreferenceScreen>
