<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_red"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/menu_setting"
        app:showAsAction="collapseActionView" />
</menu>